logs/Slang/generic/typedef/typedef_test_17.sv.log
name: typedef_test_17
description: Test
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_17.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_17.sv:8:3: error: unknown class or package 'apkg'
  apkg::type_member #(N, M) [P:0] some_member;
  ^~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_17.sv:8:28: error: expected declarator
  apkg::type_member #(N, M) [P:0] some_member;
                           ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_17.sv:8:30: error: use of undeclared identifier 'P'
  apkg::type_member #(N, M) [P:0] some_member;
                             ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_17.sv:8:35: error: expected data type (implicit type name not allowed)
  apkg::type_member #(N, M) [P:0] some_member;
                                  ^
